--- a/.storybook/styles/global.css
+++ b/.storybook/styles/global.css
@@ -1,2 +1,11 @@
+body { font-family: Arial, Helvetica, sans-serif; }
 .red { color: red; }
 .bordered { border: 3px dashed red; }
+.nw-label {
+    position: relative;
+    height: 100%;
+    font-size: 14px;
+    line-height: 1.5 \9;
+    display: flex;
+    align-items: center;
+}
