--- a/src/@components/Input/input.scss
+++ b/src/@components/Input/input.scss
@@ -19,10 +19,10 @@
     -webkit-transition: all .3s;
     transition: all .3s;
     outline: none;
-}
-.nw-input.block {
-	max-width: 100%;
-	width: 100%;
+    position: relative;
+
+    max-width: 100%;
+    width: 100%;
 }
 .nw-input.align-left {
 	text-align: left;
@@ -32,4 +32,31 @@
 }
 .nw-input.align-center {
 	text-align: center;
+}
+.input-wrap {
+    position: relative;
+    display: inline-block;
+}
+.input-wrap.-block {
+    display: block;
+}
+.nw-input.-before-adjust-padding {
+    padding-left: 37px;
+}
+.nw-input.-after-adjust-padding {
+    padding-right: 37px;
+}
+.nw-addon {
+    position: absolute;
+    background: rgba(0,0,0,0.05);
+    z-index: 1;
+    height: 96%;
+    width: 30px;
+    // flex svg, icon, image
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    &.-before { left: 0; }
+    &.-after { right: 0; }
 }
