--- a/src/@components/Input/input.scss
+++ b/src/@components/Input/input.scss
@@ -24,13 +24,13 @@
     max-width: 100%;
     width: 100%;
 }
-.nw-input.align-left {
+.nw-input.-align-left {
 	text-align: left;
 }
-.nw-input.align-right {
+.nw-input.-align-right {
 	text-align: right;
 }
-.nw-input.align-center {
+.nw-input.-align-center {
 	text-align: center;
 }
 .input-wrap {
@@ -56,7 +56,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
     &.-before { left: 0; }
     &.-after { right: 0; }
 }
