--- a/src/@components/Select/select.scss
+++ b/src/@components/Select/select.scss
@@ -1,9 +1,8 @@
 $offset: 10px;
-$optionGutter: 1px;
+$selectGutter: 1px;
 
 .select-wrap select, 
 .select-wrap input {
-
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
@@ -28,7 +27,11 @@ $optionGutter: 1px;
     max-width: 100%;
     width: 100%;
 }
-// Input Tag
+/* 
+|---------------------
+| As Input
+|---------------------
+*/
 .select-input {
     padding-right: 30px + $offset !important;
     white-space: nowrap; 
@@ -38,9 +41,11 @@ $optionGutter: 1px;
 .select-input.-prevent-pointer {
     pointer-events: none;
 }
-.select-wrap .nw-option.-hidden-opts {
-    display: none;
-}
+/* 
+|---------------------
+| Select > Option
+|---------------------
+*/
 .select-wrap .nw-option {
     list-style: none;
     border: 1px solid #d9d9d9;
@@ -79,12 +84,15 @@ $optionGutter: 1px;
         border-bottom-right-radius: 4px;
     }
     &.-down {
-        top:  32px + $optionGutter;
+        top:  32px + $selectGutter;
         left: 0;
     }
     &.-up {
-        top: 0;
+        bottom: 30px + 5;
         left: 0;
+    }
+    &.-hidden-opts {
+        display: none;
     }
 }
 .select-wrap:after {
@@ -97,25 +105,37 @@ $optionGutter: 1px;
     right:0;
     content: '';
 }
-.select-wrap.-switched {
-    > select { display: none; };
+.select-wrap {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    &.-block {
+        display: block;
+    }
+    &.-switched {
+        > select { display: none; };
     > .select-input { display: block; };
+    }
 }
-.select-wrap select::-ms-expand { display: none;}
-.select-wrap select {
-    padding-right: 30px + $offset;
-    -webkit-appearance: none;
-    appearance: none;
-}
-.actual-select-tag {
+.select-wrap .select-tag {
     width: 1px;
     height: 1px;
 }
+.select-wrap .disable-user-select {
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;     
+}
+/* 
+|---------------------
+| Ant arrow
+|---------------------
+*/
 .select-wrap .ant-arrow {
     position: absolute;
     top:   9px;
     right: 8px;
-
     -webkit-transition: -webkit-transform .2s linear;
     -ms-transition: -ms-transform .2s linear;
     transition: transform .2s linear;  
@@ -124,6 +144,17 @@ $optionGutter: 1px;
     transform:rotate(180deg);
     -ms-transform:rotate(180deg);
     -webkit-transform:rotate(180deg);
+}
+/* 
+|---------------------
+| Advabce modification
+|---------------------
+*/
+.select-wrap select::-ms-expand { display: none;}
+.select-wrap select {
+    padding-right: 30px + $offset;
+    -webkit-appearance: none;
+    appearance: none;
 }
 @-moz-document url-prefix(){
     .select-wrap select { 
@@ -139,18 +170,5 @@ $optionGutter: 1px;
         // border: none !important;
     }
 }
-.select-wrap {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-}
-.select-wrap.-block {
-    display: block;
-}
-.select-wrap .no-selection {
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-    -moz-user-select: none;     /* Firefox all */
-    -ms-user-select: none;      /* IE 10+ */
-    user-select: none;     
-}
+
 
