--- a/src/@components/Select/select.scss
+++ b/src/@components/Select/select.scss
@@ -1,8 +1,41 @@
-$offset: 10px;
-$selectGutter: 1px;
+/*|-------------------
+  | Main()
+  |-------------------*/
+  $offset: 10px;
+  $selectGutter: 1px;
 
+.select-wrap {
+    position: relative;
+    display: inline-block;
+    color: rgba(0,0,0,0.65);
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    background: #fff;
+    text-align: left;
+    width: 250px;
+    height: 32px; // only
+    max-width: 100%;
+
+    cursor: pointer;
+    &.-block {
+        display: block;
+        width: 100%;
+    }
+    &.-switched {
+        > .select-tag   { display: none; };
+        > .select-input { display: block; };
+    }
+}
+.select-wrap > span {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: block;
+    box-sizing: border-box;
+}
 .select-wrap select, 
-.select-wrap input {
+.select-wrap .select-input,
+.select-wrap .div-label {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
@@ -10,49 +43,77 @@ $selectGutter: 1px;
     list-style: none;
     position: relative;
     display: inline-block;
-    height: 32px;
+    height: 100%;
     padding: 4px 11px;
-    color: rgba(0,0,0,0.65);
-    font-size: 14px;
-    line-height: 1.5 \9;
-    background-color: #fff;
+    
     background-image: none;
-    border: 1px solid #d9d9d9;
+    border: none !important;
     border-radius: 4px;
     -webkit-transition: all .3s;
     transition: all .3s;
     outline: none;
     position: relative;
-
     max-width: 100%;
     width: 100%;
+    /*
+    |--------------------------------
+    |inherit from parent attributes
+    |-------------------------------- */
+    font-size: 14px;
+    line-height: normal;
+    color: inherit;
+    text-align: inherit;
+    background-color: inherit;
 }
-/* 
-|---------------------
-| As Input
-|---------------------
-*/
-.select-input {
+.select-wrap .select-input,
+.select-wrap .div-label {
     padding-right: 30px + $offset !important;
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.select-input.-prevent-pointer {
-    pointer-events: none;
+.-prevent-pointer {
+    pointer-events:none !important;
+    
+}
+/* 
+|---------------------
+| As Input
+|---------------------*/
+.select-wrap .select-input.-not-used {
+    width: 0px;
+    max-width: 0px;
+    height: 0px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+/* 
+|---------------------
+| As Div Label
+|---------------------*/
+.select-wrap .div-label {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    /* do nothing for now */
 }
 /* 
 |---------------------
 | Select > Option
-|---------------------
-*/
+|---------------------*/
 .select-wrap .nw-option {
     list-style: none;
     border: 1px solid #d9d9d9;
     background-color: #fff;
     background-image: none;
     box-sizing: border-box;
-    margin: 0;
+    margin: 1px 0 0 0;
+    border-top: 0;
     padding: 0;
     width: 100%;
     border-bottom-left-radius: 4px;
@@ -64,8 +125,7 @@ $selectGutter: 1px;
     // justify-content: center;
     // flex-direction:column;
     box-shadow: 3px 3px 5px -1px #ddd;
-    
-    max-height: 6 * 30px; // by default size: 4;
+    max-height: 6 * 30px; // by default size: 5;
     overflow-y: auto;
 
     > li {
@@ -73,23 +133,28 @@ $selectGutter: 1px;
         padding: 7px 11px;
         color: rgba(0,0,0,0.65);
         font-size: 14px;
-
         &:hover,
         &.-active {
             background: #efefefef;
         }
+    }
+    > li:first-child {
+        border-top: none !important;
     }
     > li:last-child {
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
     }
     &.-down {
-        top:  32px + $selectGutter;
+        top:  32px + $selectGutter + 1;
         left: 0;
     }
     &.-up {
-        bottom: 30px + 5;
+        bottom: 30px + 5 + 1;
         left: 0;
+        border-top: 1px solid #d9d9d9;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
     }
     &.-hidden-opts {
         display: none;
@@ -105,41 +170,32 @@ $selectGutter: 1px;
     right:0;
     content: '';
 }
-.select-wrap {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    &.-block {
-        display: block;
-    }
-    &.-switched {
-        > select { display: none; };
-    > .select-input { display: block; };
-    }
-}
 .select-wrap .select-tag {
     width: 1px;
     height: 1px;
 }
-.select-wrap .disable-user-select {
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-    -moz-user-select: none;     /* Firefox all */
-    -ms-user-select: none;      /* IE 10+ */
+.-disable-user-select {
+    -webkit-user-select: none; /* Chrome/Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+    /* Rules below not implemented in browsers yet */
+    -o-user-select: none;
     user-select: none;     
 }
-/* 
+/*
 |---------------------
 | Ant arrow
-|---------------------
-*/
+|---------------------*/
 .select-wrap .ant-arrow {
     position: absolute;
     top:   9px;
     right: 8px;
+    fill: #bebebe;
     -webkit-transition: -webkit-transform .2s linear;
     -ms-transition: -ms-transform .2s linear;
     transition: transform .2s linear;  
 }
+
 .select-wrap .ant-arrow.-rotate {
     transform:rotate(180deg);
     -ms-transform:rotate(180deg);
@@ -148,8 +204,7 @@ $selectGutter: 1px;
 /* 
 |---------------------
 | Advabce modification
-|---------------------
-*/
+|---------------------*/
 .select-wrap select::-ms-expand { display: none;}
 .select-wrap select {
     padding-right: 30px + $offset;
@@ -170,5 +225,3 @@ $selectGutter: 1px;
         // border: none !important;
     }
 }
-
-
